# cascaded-sqli-detection

./: .gitignore  README.md  classical_models.py  config.ini  detect_sqi_with_transformers.ipynb  ensemble_models.py  experiments.py  main.ipynb  main.py  nlp_hybrid.py  rafi-sqli.yml  results_230214_193603.pkl  results_230214_205100.pkl  results_230214_205321.pkl  results_230214_210527.pkl  results_230214_211201.pkl  results_230309_112627.pkl  run_classical_MLs.py  setup.cfg  setup.py  sqli-env.yml  templates.py  tmptest.py
conf/: nlp.conf
datasets/: SQLiV3.tsv
package/: __init__.py  bag_of_characters.py  bag_of_words.py  classify_text_with_bert.ipynb  configurations.py  datasets.py  detect_sqi_with_transformers.ipynb  general_utils.py  hybrid1_averaging_nlp.py  hybrid2_averaging_ml.py  hybrid3_avg_best_prf.py  hybrid4_merging_nlp_features.py  logger.py  main.py  multinomial_naive_bayes.py  record.py  svm_model.py  tf_idf.py  tf_idf_n_gram.py  transformers.py  xgboost_model.py
paper/Figures/: .gitkeep
results/: params_230525_153416.json  proposed_method_results 230416_xgboost_UL12h768a12.csv  proposed_method_results.csv  proposed_method_results_230525_PAC_UL12h768a12.csv  proposed_method_results_230530_130524_PAC_smallUL8h128a2.csv  proposed_method_results_230531_142518_PAC_electra_base.csv  proposed_method_results_230531_165029_PAC_MCL12H768A12.csv  proposed_method_results_old.csv  results_230410_165455 - Copy.csv  results_230410_165455.csv  results_230525_153416.csv  results_230530_150016_BERTs_5seeds.csv  results_230531_combined.csv  xgboost_pred_230410_170023.csv
utils/: Demonstrate_test_results.ipynb  Demonstrate_test_results_HARIKAonly.ipynb  clean-kaggle-sqli-dataset-and-split.ipynb  convert-old-dataset-to-new-single-tab.ipynb  dataset-train-test-splitter.ipynb  main.py  tmp_color_schema.ipynb
utils/sample_datasets/: NEW_normal_plus_waf_bypass_dataset_testing.tsv  SQLiV3_test.tsv  (+4 more)
