[metadata]
description = Hybrid NLP Approaches to Detect Cyber Threats
author = Dr. Rafiullah Khan
author_email = rafiullah.khan@qub.ac.uk
license = GNU GPLv3
url = http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/M002837/1
# Comma separated list of data INSIDE library package to include.
# DO NOT prepend the package name when specifying files and folders.
package_data = 
# Comma separated list of data OUTSIDE library package to include.
# Equivalent to adding files to MANIFEST.in which is not needed.
data_files = *.rst, *.txt
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = Development Status :: 5 - Stable,
              Programming Language :: Python

[console_scripts]
# Add here console scripts like:
# executable = package.MODULE:FUNCTIONNAME
nlp_hybrid = package.main:software_initalization



[data_files]
# Add here data to be included which lies OUTSIDE library package, e.g.
# path/to/destination = files/to/include, others/to/include
# This is the same as adding files to MANIFEST.in which is not needed anymore.
# The destination is relative to the root of library virtual environment.
# Use ** as wildcard if you want to recursively include a pattern, e.g.
# tests/**.py would include all py-files in all subfolders of tests.
share/package = *.rst, *.txt

[extras_require]
# Add here additional requirements for extra features, like:
# PDF = ReportLab>=1.2, RXP

[pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = tests
    --cov package --cov-report term-missing
    --verbose

[aliases]
test = pytest
